--- a/pii-masking-gui/src/index.css
+++ b/pii-masking-gui/src/index.css
@@ -7,7 +7,7 @@
 
   color-scheme: light dark;
   color: rgba(0, 0, 0, 1);
-  background-color: #B2AC88;
+  background-color: 		#738276;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,6 +25,7 @@ a:hover {
 }
 
 body {
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,15 +36,18 @@ body {
 }
 
 h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 3.2em;
   font-style: italic;
-  font-weight: 200;
+  font-weight: 400;
   line-height: 1.1;
 }
 
 h2{
   font-size: 1.7em;
-  font-weight: 100;
+  font-weight: 200;
   font-style: italic;
 }
 
@@ -68,13 +72,57 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+span {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border-style: solid;
+  border-color: white;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+span:hover{
+  background-color: #ffffff;
+  border-color: black;
+  color: black;
+}
+
+#buttons1{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 1000px;
+  margin-top: 50px;
+  gap: 15%;
+}
+
+#buttons2{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 1000px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  gap: 70%;
+}
+
 #buttons{
   display: flex;
   flex-direction: row;
-  width: 500px;
+  justify-content: end;
+  align-items: center;
+  width: 1000px;
   margin-top: 50px;
-  margin-left: 30%;
-  gap: 40%;
+  gap: 20%;
 }
 
 #login{
@@ -96,6 +144,27 @@ button:focus-visible {
 #aut{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 75px;
+}
+
+#auth{
+  display: flex;
+  flex-direction: column;
+  gap: 75px;
+  width: 1000px;
+}
+
+#auth h2{
+  margin-left: 50px;
+}
+
+#authe{
+  display: flex;
+  flex-direction: column;
+  gap: 75px;
+  width: 1000px;
 }
 
 #anon{
@@ -103,6 +172,11 @@ button:focus-visible {
   flex-direction: row;
   margin-bottom: 50px;
 }
+
+#anon label{
+  margin-right: 10px;
+}
+
 
 
 #textbox{
@@ -124,6 +198,8 @@ button:focus-visible {
 }
 
 label{
+  -webkit-text-stroke-width: 0.2px;
+  -webkit-text-stroke-color: black;
   font-size: 1.5em;
   color: #7D6943;
   font-weight: 300;
@@ -133,16 +209,46 @@ label{
 #startup{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 50px;
   padding-left: 200px;
   padding-right: 200px;
 }
 
 #checks{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   background-color: #D9D9D9;
   border-style: solid;
   border-color: black;
   margin-left: 50px;
+  padding-top: 15px;
+  padding-right: 20px;
+  gap: 50px;
+}
+
+#icon{
+  display: flex;
+  flex-direction: column;
+}
+
+#icons{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+#icons label{
+  display: inline-block;
+  color: black;
+  font-size: 1em;
+}
+
+#cont{
+  padding-top: 1px;
 }
 
 input[type=radio]{
@@ -164,8 +270,23 @@ input[type=text], input[type=password]{
   font-family:monospace;
 }
 
+#textbox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1000px;
+}
 
 #neroutput{
   background-color: #D9D9D9;
   border-style: solid;
+  padding-left: 25px;
+  gap: 50px;
+}
+
+#ner{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
 }
